# task_3

./: E2.csv  README.md  environment.gpu.yml  environment.yml  frames.csv  index.csv  pyproject.toml
annotations/: exp1.csv
calibration/: nerian_gnb_1_calib.yaml
scripts/: submit_train.slurm
task3_baseline/: __init__.py  data.py  eval.py  model.py  predict.py  train.py  utils.py
